weathercard component, display the mockforecasts as a list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div style="text-align:center">
   <img src="../assets/logo-bateau.png" alt="logo bateau">
   <h1>Bienvenue dans l'application de météo de la ville de {{title}}</h1>
+  <app-weather-card></app-weather-card>
 </div>
