--- a/src/app/component/weather-card/weather-card.component.css
+++ b/src/app/component/weather-card/weather-card.component.css
@@ -1,3 +1,6 @@
+li{
+    list-style: none;
+}
 .card{
     display: flex; 
     flex-direction: row; 
@@ -11,4 +14,20 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+}
+.card-detail{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.selected{
+    background-color: #b9e7fdc7;
+}
+.transform {
+    transform: scale(1);
+    transition-property: all;
+    transition-duration: 0.3s;
+}
+.transform:hover {
+    transform: scale(1.04);
 }
