--- a/src/app/components/weather-card-details/weather-card-details.component.css
+++ b/src/app/components/weather-card-details/weather-card-details.component.css
@@ -1,3 +1,17 @@
 li{
     list-style: none;
 }
+.cardDetail{
+    display: flex; 
+    flex-direction: row; 
+    justify-content: space-around;
+}
+.cardDetails-body{
+    border-radius: 5px;
+    border: solid;
+    margin: 0;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
