essai I chgmt path images (relative file path)

--- a/src/app/components/weather-card/weather-card.component.html
+++ b/src/app/components/weather-card/weather-card.component.html
@@ -11,7 +11,7 @@ class="card"
         <li>à {{ foreCast.dt_txt | date:'hh'}}h</li>
         <li>
             <img
-            src="../../../assets/{{foreCast.icon}}.png"
+            src="saint-malo-weather-app/assets/{{foreCast.icon}}.png"
             alt="icon meteo"
             />
         </li>
