essai 2 chgmt relative path

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<img src="saint-malo-weather-app/assets/logo-bateau.png" alt="logo bateau">
+<img src="assets/logo-bateau.png" alt="logo bateau">
 <h1>Bienvenue dans l'application de météo de la ville de Saint-Malo</h1>
 <h2 *ngIf="selectedTimeRange === 'week'">Temps des 5 prochains jours</h2>
 <h2 *ngIf="selectedTimeRange === 'day'">Temps de la journée</h2>
