--- a/src/app/components/weather-card/weather-card.component.css
+++ b/src/app/components/weather-card/weather-card.component.css
@@ -14,6 +14,7 @@ li{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    cursor: pointer
 }
 .selected{
     background-color: #b9e7fdc7;
