--- a/src/app/components/weather-card/weather-card.component.html
+++ b/src/app/components/weather-card/weather-card.component.html
@@ -1,4 +1,5 @@
 <app-header [selectedTimeRange]="selectedForeCast ? 'day' : 'week'"></app-header>
+<div>{{errorMessage}}</div>
 <div 
 class="card"
 *ngIf="!selectedForeCast" >
